tests/baselines/reference/asiPublicPrivateProtected.errors.txt
tests/cases/compiler/asiPublicPrivateProtected.ts(1,1): error TS2552: Cannot find name 'public'. Did you mean 'eval'?
tests/cases/compiler/asiPublicPrivateProtected.ts(12,1): error TS2552: Cannot find name 'private'. Did you mean 'Date'?
tests/cases/compiler/asiPublicPrivateProtected.ts(23,1): error TS2552: Cannot find name 'protected'. Did you mean 'Object'?


==== tests/cases/compiler/asiPublicPrivateProtected.ts (3 errors) ====
    public
    ~~~~~~
!!! error TS2552: Cannot find name 'public'. Did you mean 'eval'?
    class NonPublicClass {
        public s() {
        }
    }
    
    class NonPublicClass2 {
        public
        private nonPublicFunction() {
        }
    }
    private
    ~~~~~~~
!!! error TS2552: Cannot find name 'private'. Did you mean 'Date'?
    class NonPrivateClass {
        private s() {
        }
    }
    
    class NonPrivateClass2 {
        private
        public nonPrivateFunction() {
        }
    }
    protected
    ~~~~~~~~~
!!! error TS2552: Cannot find name 'protected'. Did you mean 'Object'?
    class NonProtectedClass {
      protected s() {
      }
    }
    
    class NonProtectedClass2 {
        protected
        public nonProtectedFunction() {
        }
    }
    
    class ClassWithThreeMembers {
        public
        private
        protected
    }
    